update load showtimesByFilm by ajax

--- a/views/admin/cineplex.ejs
+++ b/views/admin/cineplex.ejs
@@ -76,7 +76,7 @@
                     <!-- FORM CẬP NHẬT -->
 
                     <form class="modal-content animate" action="/admin/cineplex/update/<%=cineplex[i].cineplex_ID %>"
-                        method="POST" id="btn_update_cineplex">
+                        method="POST" id="btn_update_cineplex" enctype="multipart/form-data">
 
                         <div class="container">
                             <label> Tên cụm rạp:</label>
