--- a/views/admin/filmAll.ejs
+++ b/views/admin/filmAll.ejs
@@ -59,7 +59,7 @@
                                                 <% }%>
                                     </td>
                                     <td>
-                                        <%= filmAll[i].film_ViewCount %>
+                                        <%= filmAll[i].film_VisitCount %>
                                     </td>
                                     <td style="cursor:pointer">
                                         <a id="btn_update_film_<%= filmAll[i].film_ID %>">
