--- a/views/home.ejs
+++ b/views/home.ejs
@@ -41,7 +41,7 @@
 
 
     </header>
-
+    <!-- MOVIE SELECTION -->
     <% if (typeof homeMovieSelection !=='undefined' ) { %>
         <% include partials/homeMovieSelection %>
             <% } %>
