--- a/public/css/home.css
+++ b/public/css/home.css
@@ -482,17 +482,18 @@
 * ============================================ */
         
         .content-rap {
-            margin-top: 5px;
-            padding-top: 10px;
+            /* margin-top: 5px; */
+            /* padding: 10px 20px; */
         }
         
         .content-rap-bg {
-            width: 300px;
-            height: 34px;
-            line-height: 34px;
+            width: 50%;
+            height: 40px;
+            line-height: 40px;
             border-left: 3px solid black;
-            background-color: #aa5454;
-            padding: 7px 10px;
+            border-right : 3px solid black;
+            background-color: #AA5454;
+            padding: 10px 20px;
             margin: auto;
             margin-bottom: 20px;
             text-align: center;
@@ -500,7 +501,7 @@
         
         .content-rap-bg-fix {
             font-family: 'Source Serif Pro';
-            font-size: 16px;
+            font-size: 20px;
             margin: auto;
             color: white;
         }
