--- a/views/admin/showtimesByCinema.ejs
+++ b/views/admin/showtimesByCinema.ejs
@@ -36,11 +36,19 @@
                             </td>
                             <td>
                                 <% var d=new Date(showtimesByCinema[i].showtime_Date); %>
-                                    <%= d.getDate(); %>
-                                        /
-                                        <%= d.getMonth()+1; %>
-                                            /
-                                            <%= d.getFullYear(); %>
+                                    <% if(d.getDate()<10){ %>
+                                        <%= '0' + String(d.getDate()) %>
+                                            <% }else{ %>
+                                                <%= d.getDate() %>
+                                                    <% }; %>
+                                                        /
+                                                        <% if(d.getMonth()<10){ %>
+                                                            <%= '0' + String(d.getMonth()+1) %>
+                                                                <% }else{ %>
+                                                                    <%= d.getMonth() %>
+                                                                        <% }; %>
+                                                                            /
+                                                                            <%= d.getFullYear(); %>
                             </td>
                             <td>
                                 <% var begin=String(showtimesByCinema[i].showtime_Begin).substr(0,5); var
