--- a/views/admin/showtimesByFilm.ejs
+++ b/views/admin/showtimesByFilm.ejs
@@ -13,7 +13,7 @@
                         <th>Rạp - Cụm rạp</th>
                         <th>Phim</th>
                         <th>Ngày chiếu </th>
-                        <th>Thời gian bắt đầu - kết thúc </th>
+                        <th>Thời gian</th>
                         <th>Giá vé</th>
                         <th>Thao tác</th>
                     </tr>
@@ -33,11 +33,19 @@
                             </td>
                             <td>
                                 <% var d=new Date(showtimesByFilm[i].showtime_Date); %>
-                                    <%= d.getDate(); %>
-                                        /
-                                        <%= d.getMonth()+1; %>
-                                            /
-                                            <%= d.getFullYear(); %>
+                                    <% if(d.getDate()<10){ %>
+                                        <%= '0' + String(d.getDate()) %>
+                                            <% }else{ %>
+                                                <%= d.getDate() %>
+                                                    <% }; %>
+                                                        /
+                                                        <% if(d.getMonth()<10){ %>
+                                                            <%= '0' + String(d.getMonth()+1) %>
+                                                                <% }else{ %>
+                                                                    <%= d.getMonth() %>
+                                                                        <% }; %>
+                                                                            /
+                                                                            <%= d.getFullYear(); %>
                             </td>
                             <td>
                                 <% var begin=showtimesByFilm[i].showtime_Begin.substr(0,5) %>
