--- a/views/partials/header/menu.ejs
+++ b/views/partials/header/menu.ejs
@@ -9,7 +9,7 @@
                 <li class="active"><a href="/gioi-thieu">Giới thiệu</a></li>
                 <li><a href="/phim">Phim</a></li>
                 <li><a href="/he-thong-rap">Hệ thống rạp</a></li>
-                <li><a href="/khuyen-mai">Khuyến mãi</a></li>
+                <li><a href="/event">Sự kiện</a></li>
                 <li><a href="/ho-tro">Hỗ trợ</a></li>
             </ul>
 
