--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,13 +10,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/public/css/home.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,300;0,400;0,700;1,300;1,600&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,300;0,400;0,700;1,300;1,600&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
 </head>
 
@@ -56,15 +53,18 @@
                                     <!-- GIỚi THIỆU -->
                                     <% }if (typeof intro !=='undefined' ) { %>
                                         <% include content/intro %>
-                                            <!-- SHOW FILM -->
-                                            <% } if (typeof film !=='undefined' ){ %>
-                                                <% include content/showFilms %>
-                                                    <!-- CHI TIẾT PHIM -->
-                                                    <% } if (typeof currentFilm !=='undefined' ) { %>
-                                                        <% include content/film/film_details %>
-                                                            <% } if (typeof searchNameFilm !=='undefined' ) { %>
-                                                                <% include content/searchNameFilm %>
-                                                                    <% } %>
+                                            <!-- SỰ KIỆN -->
+                                            <% }if (typeof event !=='undefined' ) { %>
+                                                <% include content/event %>
+                                                    <!-- SHOW FILM -->
+                                                    <% } if (typeof film !=='undefined' ){ %>
+                                                        <% include content/showFilms %>
+                                                            <!-- CHI TIẾT PHIM -->
+                                                            <% } if (typeof currentFilm !=='undefined' ) { %>
+                                                                <% include content/film/film_details %>
+                                                                    <% } if (typeof searchNameFilm !=='undefined' ) { %>
+                                                                        <% include content/searchNameFilm %>
+                                                                            <% } %>
                 </main>
 
                 <footer>
